# hausKI

./: .ai-context.yml  .env.example  .gitattributes  .gitignore  .hauski-reports  .lychee.toml  .lycheeignore  CONTRIBUTING.md  Cargo.toml  README.md  contracts  deny.toml  hauski-skizze.md  hauski-stack.md  hauski.code-workspace  justfile  mkdocs.yml  push.err  pyproject.toml  sichter-reports
.cargo/: config.toml
.dev/: dev.tooling.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  grabowski-required-checks.json  rust.json  secret_scanning.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  ai-context-guard.yml  ci-tools.yml  ci.yml  cli-docs-check.yml  codeql.yml  codex-review.yml  contracts-validate.yml  contracts.yml  coverage.yml  heavy.yml  links.yml  metrics.yml  playbook-gate.yml  policy-ci.yml  pr-heimgewebe-commands.yml  release.yml  reusable-validate-vendor.yml  review-cycle-check.yml  secret-scan-gitleaks.yml  security.yml  validate-aussen-optional.yml  validate-dev-tooling.yml  validate-events.yml  vendor.yml  wgx-guard.yml  wgx-smoke.yml
.local/: README.md
.systemd/: hauski-reviewd.service  hauski-reviewd.timer  sichterd.service  sichterd.timer
.vale/styles/hauski/: GermanComments.yml  GermanProse.yml
.vale/styles/hauski/GermanComments/: GermanComments.yml
.vale/styles/hauski/GermanProse/: GermanProse.yml
.wgx/: profile.yml
configs/: flags.yaml  hauski.yml  models.yml
contracts/: events.schema.json
contracts/examples/: event.sample.json
crates/cli/: Cargo.toml  LICENSE
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ask.rs  assist.rs  chat.rs  chat_upstream.rs  cloud.rs  config.rs  egress.rs  error.rs  events.rs  events_tests.rs  intent.rs  intent_tests.rs  lib.rs  lib.rs.bak  main.rs  memory_api.rs  plugins.rs  system.rs  tools.rs
crates/core/src/config/: loader.rs  mod.rs  types.rs
crates/core/tests/: chat_unconfigured.rs  memory_routes.rs  metrics_smoke.rs  system_signals.rs
crates/embeddings/src/: lib.rs
crates/indexd/: Cargo.toml  Cargo.toml.save  FORGETTING.md
crates/indexd/src/: lib.rs
crates/indexd/tests/: api_endpoints_test.rs  contamination_test.rs  decay_and_forget_test.rs  decision_feedback_test.rs  decision_weighting_test.rs  integration_test.rs
crates/indexd/tests/common/: mod.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs  policy_client.rs  remind_bandit.rs
crates/policy/src/utils/: events.rs  mod.rs  policy_store.rs
crates/policy_api/: Cargo.toml
crates/policy_api/src/: lib.rs
crates/policy_api/src/utils/: events.rs
docs/: CONTRIBUTING.md  ambient-assistant.md  api.md  audit-hauski.md  cli.md  decision-feedback.md  decision-weighting.md  hauski-guidance.md  hauski-skizze.md  hauski-stack.md  inconsistencies.md  index.md  integration_with_heimgeist.md  intent.md  ist-stand-vs-roadmap.md  review-cycle.md  semantah.md
docs/adr/: ADR-0001__ziele-und-scope.md  ADR-0002__toolchain-strategie.md  ADR-0003__code-safety.md  README.md
docs/adrs/: ADR-0001-toolchain-strategy.md
docs/contracts/: events.md  heimlern-compatibility-freeze.md  heimlern-compatibility-freeze.v1.json  x-repo-events.md
docs/contracts/hauski/: system.signals.md  system.signals.v1.schema.json
docs/contracts/lenskit/: query_vault.schema.json  search_codebase.schema.json
docs/contracts/tools/: query_vault.schema.json  search_codebase.schema.json
docs/hausmaister/: blueprint.md
docs/modules/: assist.md  audio.md  core.md  index.md  indexd-security.md  indexd.md  memory.md  observability.md  policy.md
docs/playbooks/: ci-failure-main.md
docs/process/: README.md  release.md  testing.md
docs/runbooks/: incident-response.md  index.md  local-chat.md  local-dev.md  troubleshooting.md  upgrade-guide.md  upgrade.md
docs/vision/: multi-agent-rag.md
infra/compose/: compose.core.yml
observability/k6/: health-smoke.js
playbooks/: ai_assist.yml  ci-failure-main.yaml  ci_failure_triage.yml  code_assist.yml
policies/: context.yaml  indexd_retention.example.yaml  indexd_retention.yaml  memory.yaml  routing.yaml  slo.yaml  trust.yaml
scripts/: agents-sync-from-metarepo.sh  bootstrap.sh  check-vendor.sh  ci-smoke-chat.sh  demo-decision-feedback.sh  emit_event_line.sh  ensure-vendor.sh  generate-test-summary.sh  git-apply-nolock.sh  hauski-codex.sh  hauski-reviewd.sh  hauski-run.sh  mock_ollama.py  sichterd.sh  start-all.sh  stop-all.sh  validate-jsonschemas.py  vendor-prune.sh  verify_heimlern_freeze.py
scripts/ai_context/: validate_ai_context.py
scripts/lib/: logging.bash
services/minimal-server/: README.md  pyproject.toml
services/policy_shadow/: README.md  app.py  pyproject.toml
tests/: test_heimlern_freeze.py
tools/: check_leitstand_references.sh
tools/py/: README.md
tools/semantah/: build_graph.py  build_index.py  update_related.py
