[workspace]
members = [
  "crates/core",
  "crates/cli",
  "crates/embeddings",
  "crates/indexd",
  "crates/memory",
  "crates/policy",
  "crates/policy_api",
  "vendor/heimlern-core",
  "vendor/heimlern-bandits",
  # weitere später: indexd, llm, asr, tts, audio, memory, commentary, bridge, observability, security, adapters/*
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
prometheus-client = "0.24"
prometheus-client-derive-encode = "0.5.0"
walkdir = "2"
dirs = "6.0.0"
# Abhängigkeiten, die bereits von mehreren Crates genutzt werden, zentralisieren
tower = "0.5"
utoipa = { version = "5.4", features = ["macros", "axum_extras", "yaml", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["vendored"] }
http-body-util = "0.1"
serial_test = "3"
tempfile = "3"
# sqlx bewusst nicht vorgezogen, bis erste DB-Crate existiert
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "gzip"] }
url = "2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
hostname = "0.4"
ulid = "1"
sysinfo = "0.30"
r2d2 = "0.8"

[patch.crates-io]
# Keep selected crates pinned to vendored stubs for offline builds. We retain
# a minimal local shim for `anyhow` instead of vendoring the full upstream
# crate to avoid future drift between manual edits and cargo-vendor output.
anyhow = { path = "vendor/anyhow" }
signal-hook-registry = { path = "vendor/signal-hook-registry" }
hostname = { path = "vendor/hostname" }
ulid = { path = "vendor/ulid" }
utoipa-swagger-ui-vendored = { path = "vendor/utoipa-swagger-ui-vendored" }
