[project]
name = "hauski-tools"
version = "0.0.1"
description = "Local tooling for HausKI (docs, lint, scripts) via uv"
requires-python = ">=3.10"
readme = "README.md"

[tool.uv]
managed = true
python-preference = "managed"
# Require a recent uv CLI release; Python compatibility lives above in
# `requires-python`.
required-version = ">=0.7.0"

[project.optional-dependencies]
## Note:
## Dev tools are now only maintained here under the PEP 621-compliant extras.
## Installation:
##   - uv:  `uv sync --extra dev --frozen`
##   - pip: `pip install .[dev]`
dev = [
  "fastapi>=0.115",
  "pydantic>=2.9",
  "ruff==0.14.13",
  "pre-commit>=3.8",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-git-revision-date-localized-plugin>=1.3",
  "pytest>=8.3",
  "rich>=13.9",
  "uvicorn[standard]>=0.32",
  # Keep jsonschema in the dev extra so the uv.lock pin stays reachable for CI.
  "jsonschema==4.26.0",
]

[scripts]
lint = "ruff check ."
fmt = "ruff format ."
test = "pytest -q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "ISC", "RET", "SIM", "RUF"]
ignore = ["E203", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["hauski"]
combine-as-imports = true
split-on-trailing-comma = true
