[package]
name = "hauski-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
hauski-core = { path = "../core", version = "0.1.0" }
url.workspace = true
shellexpand = "3"
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
