[package]
name = "hauski-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
prometheus-client.workspace = true
walkdir.workspace = true
dirs.workspace = true
reqwest.workspace = true
url.workspace = true
hauski-indexd = { path = "../indexd", version = "0.1.0" }
tower = { workspace = true, features = ["limit", "timeout"] }
utoipa = { workspace = true, features = ["macros"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
hauski-memory = { path = "../memory", version = "0.1.0" }
hostname.workspace = true
ulid.workspace = true
chrono = { workspace = true, features = ["serde"] }
sysinfo.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
serial_test.workspace = true
tempfile.workspace = true
