[package]
name = "hauski-memory"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
prometheus-client = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
r2d2 = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
