[package]
name = "policy"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
dirs.workspace = true
rusqlite.workspace = true
chrono.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
