[package]
name = "hauski-policy-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
heimlern-core = { workspace = true }
heimlern-bandits = { workspace = true }
hostname = { workspace = true }
ulid = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
