[package]
name = "hauski-policy-api"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
ulid = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[dependencies.heimlern-core]
path = "../../vendor/heimlern-core"
optional = true

[dependencies.heimlern-bandits]
path = "../../vendor/heimlern-bandits"
optional = true

[features]
default = []
heimlern = ["dep:heimlern-core", "dep:heimlern-bandits"]
